@@ -1,3 +1,7 @@
+* 2013-10-01 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29092: Deal with possible 'FLD-0003' error when collecting file storage root folders
+
 * 2013-09-19 - thorben.betten@open-xchange.com
 
  - Fix for bug 28932: Deal with possible 'NumberFormatException' gracefully
